--- a/1 Physics/1 Mechanics/Problem_1/index.html
+++ b/1 Physics/1 Mechanics/Problem_1/index.html
@@ -172,7 +172,89 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
-<p>hello</p>
+<h1 id="problem-1-investigating-the-range-as-a-function-of-the-angle-of-projection">Problem 1: Investigating the Range as a Function of the Angle of Projection</h1>
+<h2 id="1-theoretical-foundation">1. Theoretical Foundation</h2>
+<p>Projectile motion follows the principles of Newtonian mechanics, and its behavior can be described using the equations of motion under constant acceleration. When a projectile is launched with an initial velocity <span class="arithmatex">\(v_0\)</span> at an angle <span class="arithmatex">\(\theta\)</span>, the horizontal and vertical components of the velocity can be described as:</p>
+<ul>
+<li>Horizontal velocity: <span class="arithmatex">\(v_{0x} = v_0 \cos(\theta)\)</span></li>
+<li>Vertical velocity: <span class="arithmatex">\(v_{0y} = v_0 \sin(\theta)\)</span></li>
+</ul>
+<p>The equations governing the projectile's motion are derived from the kinematic equations:</p>
+<ul>
+<li>
+<p>Horizontal motion:<br/>
+<span class="arithmatex">\(x(t) = v_{0x} t = v_0 \cos(\theta) t\)</span><br/>
+  where <span class="arithmatex">\(x(t)\)</span> is the horizontal position of the projectile at time <span class="arithmatex">\(t\)</span>.</p>
+</li>
+<li>
+<p>Vertical motion:<br/>
+<span class="arithmatex">\(y(t) = v_{0y} t - \frac{1}{2} g t^2 = v_0 \sin(\theta) t - \frac{1}{2} g t^2\)</span><br/>
+  where <span class="arithmatex">\(y(t)\)</span> is the vertical position of the projectile at time <span class="arithmatex">\(t\)</span>, and <span class="arithmatex">\(g\)</span> is the acceleration due to gravity.</p>
+</li>
+</ul>
+<p>To find the time of flight and range, we focus on the conditions when the projectile reaches the ground again, i.e., when <span class="arithmatex">\(y(t) = 0\)</span>. Solving for <span class="arithmatex">\(t\)</span> when <span class="arithmatex">\(y(t) = 0\)</span>:</p>
+<div class="arithmatex">\[
+0 = v_0 \sin(\theta) t - \frac{1}{2} g t^2
+\]</div>
+<p>This gives two solutions: <span class="arithmatex">\(t = 0\)</span> (the initial time) and the nontrivial solution <span class="arithmatex">\(t = \frac{2 v_0 \sin(\theta)}{g}\)</span>, which is the time of flight.</p>
+<p>Now, using this time in the horizontal motion equation:</p>
+<div class="arithmatex">\[
+x(t) = v_0 \cos(\theta) \left( \frac{2 v_0 \sin(\theta)}{g} \right)
+\]</div>
+<p>Thus, the range <span class="arithmatex">\(R(\theta)\)</span> of the projectile is:</p>
+<div class="arithmatex">\[
+R(\theta) = \frac{v_0^2 \sin(2\theta)}{g}
+\]</div>
+<p>This is the range <span class="arithmatex">\(R(\theta)\)</span> of the projectile, which depends on the initial velocity <span class="arithmatex">\(v_0\)</span>, gravitational acceleration <span class="arithmatex">\(g\)</span>, and the launch angle <span class="arithmatex">\(\theta\)</span>.</p>
+<h2 id="2-analysis-of-the-range">2. Analysis of the Range</h2>
+<p>The equation for the range is:</p>
+<div class="arithmatex">\[
+R(\theta) = \frac{v_0^2 \sin(2\theta)}{g}
+\]</div>
+<p>Key observations:
+- <strong>Maximum Range:</strong> The range is maximized when <span class="arithmatex">\(\sin(2\theta)\)</span> is maximized, which occurs when <span class="arithmatex">\(\theta = 45^\circ\)</span>. This is because the sine function reaches its maximum value of 1 when <span class="arithmatex">\(2\theta = 90^\circ\)</span>, or <span class="arithmatex">\(\theta = 45^\circ\)</span>.
+- <strong>Effect of Initial Velocity:</strong> A higher initial velocity <span class="arithmatex">\(v_0\)</span> leads to a larger range since the range is proportional to the square of the velocity.
+- <strong>Effect of Gravitational Acceleration:</strong> A higher gravitational acceleration <span class="arithmatex">\(g\)</span> reduces the range, as the range is inversely proportional to <span class="arithmatex">\(g\)</span>.</p>
+<p>Thus, the relationship between the angle of projection and the range is sinusoidal, peaking at 45°, and the range increases with greater initial velocities and decreases with stronger gravitational fields.</p>
+<h2 id="3-practical-applications">3. Practical Applications</h2>
+<p>In real-world scenarios, such as sports or engineering, projectiles are often affected by air resistance, which is not accounted for in the idealized model. Air resistance introduces a drag force that depends on the velocity of the object, and as the projectile's speed increases, the drag force grows, affecting both the horizontal and vertical motions.</p>
+<p>In the presence of air resistance, the equations become more complex, and numerical methods (such as solving differential equations numerically) are often required. This model can also be adjusted for projectiles launched from uneven terrain by considering the launch height and adjusting the vertical motion equation.</p>
+<h2 id="4-implementation-python-script">4. Implementation (Python Script)</h2>
+<p>The task can be implemented using Python with the help of libraries like <code>matplotlib</code> for plotting and <code>numpy</code> for numerical calculations. Below is an outline of how to implement the simulation:</p>
+<pre><code class="language-python">import numpy as np
+import matplotlib.pyplot as plt
+
+def calculate_range(v0, theta, g=9.81):
+    # Convert angle to radians
+    theta_rad = np.radians(theta)
+
+    # Calculate range based on the formula
+    R = (v0 ** 2 * np.sin(2 * theta_rad)) / g
+    return R
+
+def plot_range_vs_angle(v0, g=9.81):
+    # Create an array of angles from 0 to 90 degrees
+    angles = np.linspace(0, 90, 100)
+
+    # Calculate the range for each angle
+    ranges = [calculate_range(v0, angle, g) for angle in angles]
+
+    # Plot the range vs angle
+    plt.figure(figsize=(8, 6))
+    plt.plot(angles, ranges, label=f'v0 = {v0} m/s')
+    plt.title('Range vs Angle of Projection')
+    plt.xlabel('Launch Angle (degrees)')
+    plt.ylabel('Range (meters)')
+    plt.grid(True)
+    plt.legend()
+    plt.show()
+
+# Example usage:
+v0 = 20  # Initial velocity in m/s
+plot_range_vs_angle(v0)
+
+</code></pre>
+<p><img alt="alt text" src="../image.png"/></p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
