--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -172,6 +172,135 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<h1 id="orbital-period-and-orbital-radius">Orbital Period and Orbital Radius</h1>
+<h2 id="1-theoretical-foundation">1. Theoretical Foundation</h2>
+<p>Kepler’s Third Law connects a planet’s orbital period to its distance from the central body, revealing the elegance of gravitational dynamics. Let’s derive it for circular orbits.</p>
+<h3 id="derivation-of-keplers-third-law">Derivation of Kepler’s Third Law</h3>
+<p><em>Notes</em>: Consider a body of mass <span class="arithmatex">\(m\)</span> in a circular orbit of radius <span class="arithmatex">\(r\)</span> around a central mass <span class="arithmatex">\(M\)</span> (where <span class="arithmatex">\(M \gg m\)</span>, so the central body is effectively fixed). Two forces balance: gravitational attraction and centripetal force required for circular motion.</p>
+<ul>
+<li><strong>Gravitational Force</strong>: Newton’s law gives:
+  <span class="arithmatex">\(<span class="arithmatex">\(F_g = \frac{G M m}{r^2}\)</span>\)</span>
+  where <span class="arithmatex">\(G\)</span> is the gravitational constant.</li>
+<li><strong>Centripetal Force</strong>: For circular motion with orbital speed <span class="arithmatex">\(v\)</span> and period <span class="arithmatex">\(T\)</span> (time for one orbit):
+  <span class="arithmatex">\(<span class="arithmatex">\(F_c = \frac{m v^2}{r}, \quad v = \frac{2\pi r}{T}\)</span>\)</span>
+  Substitute <span class="arithmatex">\(v\)</span>:
+  <span class="arithmatex">\(<span class="arithmatex">\(F_c = \frac{m}{r} \left(\frac{2\pi r}{T}\right)^2 = \frac{m 4\pi^2 r^2}{r T^2} = \frac{4\pi^2 m r}{T^2}\)</span>\)</span></li>
+</ul>
+<p>Equate <span class="arithmatex">\(F_g = F_c\)</span>:
+<span class="arithmatex">\(<span class="arithmatex">\(\frac{G M m}{r^2} = \frac{4\pi^2 m r}{T^2}\)</span>\)</span>
+Cancel <span class="arithmatex">\(m\)</span> (since <span class="arithmatex">\(m \neq 0\)</span>):
+<span class="arithmatex">\(<span class="arithmatex">\(\frac{G M}{r^2} = \frac{4\pi^2 r}{T^2}\)</span>\)</span>
+Multiply both sides by <span class="arithmatex">\(T^2\)</span> and divide by <span class="arithmatex">\(r\)</span>:
+<span class="arithmatex">\(<span class="arithmatex">\(\frac{G M T^2}{r^3} = 4\pi^2\)</span>\)</span>
+Rearrange:
+<span class="arithmatex">\(<span class="arithmatex">\(T^2 = \frac{4\pi^2}{G M} r^3\)</span>\)</span></p>
+<p><em>Notes</em>: This is Kepler’s Third Law for circular orbits: <span class="arithmatex">\(T^2 \propto r^3\)</span>, with the constant <span class="arithmatex">\(\frac{4\pi^2}{G M}\)</span> depending only on the central mass <span class="arithmatex">\(M\)</span>.</p>
+<h2 id="2-implications-for-astronomy">2. Implications for Astronomy</h2>
+<p><em>Notes</em>: This relationship is a powerful tool:
+- <strong>Planetary Masses</strong>: If <span class="arithmatex">\(T\)</span> and <span class="arithmatex">\(r\)</span> are measured for a satellite (e.g., a moon or artificial satellite), <span class="arithmatex">\(M\)</span> of the central body can be calculated:
+  <span class="arithmatex">\(<span class="arithmatex">\(M = \frac{4\pi^2 r^3}{G T^2}\)</span>\)</span>
+- <strong>Distances</strong>: For planets orbiting the Sun, comparing <span class="arithmatex">\(T^2/r^3\)</span> ratios confirms the law and allows distance estimation if <span class="arithmatex">\(M\)</span> is known.
+- <strong>Universality</strong>: Applies to any gravitational system (planets, moons, binary stars).</p>
+<p><em>Examples</em>:
+- <strong>Moon around Earth</strong>: <span class="arithmatex">\(T \approx 27.32\)</span> days, <span class="arithmatex">\(r \approx 384,400\)</span> km, used to estimate Earth’s mass.
+- <strong>Earth around Sun</strong>: <span class="arithmatex">\(T = 1\)</span> year, <span class="arithmatex">\(r = 1\)</span> AU, calibrates the Sun’s mass.</p>
+<p><em>Notes</em>: It’s foundational for orbit design (e.g., geostationary satellites) and exoplanet studies.</p>
+<h2 id="3-analysis-of-real-world-examples">3. Analysis of Real-World Examples</h2>
+<p><em>Notes</em>: Let’s verify with data:
+- <strong>Moon</strong>: <span class="arithmatex">\(T = 27.32\)</span> days = <span class="arithmatex">\(2.36 \times 10^6\)</span> s, <span class="arithmatex">\(r = 3.844 \times 10^8\)</span> m, <span class="arithmatex">\(G = 6.6743 \times 10^{-11}\)</span> m³/kg·s², Earth’s <span class="arithmatex">\(M \approx 5.972 \times 10^{24}\)</span> kg.</p>
+<ul>
+<li>
+<p><span class="arithmatex">\(T^2 = (2.36 \times 10^6)^2 = 5.57 \times 10^{12}\)</span> s²</p>
+</li>
+<li>
+<p><span class="arithmatex">\(r^3 = (3.844 \times 10^8)^3 = 5.68 \times 10^{25}\)</span> m³</p>
+</li>
+<li>
+<p>Check: <span class="arithmatex">\(\frac{4\pi^2}{G M} = \frac{39.478}{6.6743 \times 10^{-11} \cdot 5.972 \times 10^{24}} \approx 9.91 \times 10^{-14}\)</span> s²/m³</p>
+</li>
+<li><span class="arithmatex">\(T^2 / r^3 = 5.57 \times 10^{12} / 5.68 \times 10^{25} \approx 9.8 \times 10^{-14}\)</span> s²/m³—matches closely!</li>
+</ul>
+<p><em>Notes</em>: Small discrepancies reflect measurement precision or circular orbit assumption.</p>
+<h2 id="4-implementation">4. Implementation</h2>
+<p><em>Notes</em>: We’ll simulate circular orbits and plot <span class="arithmatex">\(T^2\)</span> vs. <span class="arithmatex">\(r^3\)</span> to verify the law.</p>
+<pre><code class="language-python">import numpy as np
+import matplotlib.pyplot as plt
+
+# Constants
+G = 6.6743e-11  # m^3/kg·s^2
+M_earth = 5.972e24  # kg
+M_sun = 1.989e30  # kg
+
+# Orbital period function
+def orbital_period(r, M):
+    return np.sqrt((4 * np.pi**2 * r**3) / (G * M))
+
+# Orbital radii (m)
+r_values = np.logspace(6, 9, 100)  # 10^6 to 10^9 m
+
+# Compute periods
+T_earth = orbital_period(r_values, M_earth)  # Around Earth
+T_sun = orbital_period(r_values, M_sun)      # Around Sun
+
+# Plot T^2 vs r^3
+plt.figure(figsize=(12, 6))
+
+# Log-log plot
+plt.subplot(1, 2, 1)
+plt.loglog(r_values**3, T_earth**2, 'b-', label='Earth (M = 5.972e24 kg)')
+plt.loglog(r_values**3, T_sun**2, 'r-', label='Sun (M = 1.989e30 kg)')
+plt.xlabel('r³ (m³)')
+plt.ylabel('T² (s²)')
+plt.title('T² vs r³ (Kepler\'s Third Law)')
+plt.grid(True, which="both", ls="--")
+plt.legend()
+
+# Circular orbit visualization (Moon example)
+r_moon = 3.844e8  # m
+T_moon = orbital_period(r_moon, M_earth)
+theta = np.linspace(0, 2*np.pi, 100)
+x_moon = r_moon * np.cos(theta)
+y_moon = r_moon * np.sin(theta)
+
+plt.subplot(1, 2, 2)
+plt.plot(x_moon, y_moon, 'b-', label=f'Moon Orbit (r = {r_moon/1e6:.1f} Mm)')
+plt.plot(0, 0, 'ko', label='Earth')
+plt.xlabel('x (m)')
+plt.ylabel('y (m)')
+plt.title('Circular Orbit Visualization')
+plt.axis('equal')
+plt.legend()
+
+plt.tight_layout()
+plt.show()
+
+# Verify with Moon data
+print(f"Moon: T = {T_moon/86400:.2f} days, r = {r_moon/1e6:.1f} Mm")
+</code></pre>
+<p><img alt="alt text" src="image.png"/></p>
+<p><em>Notes on Code</em>:
+- <strong>Function</strong>: <code>orbital_period</code> computes <span class="arithmatex">\(T = \sqrt{\frac{4\pi^2 r^3}{G M}}\)</span>.
+- <strong>Data</strong>: <span class="arithmatex">\(r\)</span> spans realistic ranges; <span class="arithmatex">\(T\)</span> calculated for Earth and Sun.
+- <strong>Plots</strong>:
+  - Left: Log-log <span class="arithmatex">\(T^2\)</span> vs. <span class="arithmatex">\(r^3\)</span>—a straight line confirms <span class="arithmatex">\(T^2 \propto r^3\)</span>.
+  - Right: Visualizes the Moon’s orbit as a circle.
+- <strong>Verification</strong>: Moon’s <span class="arithmatex">\(T\)</span> matches ~27 days.</p>
+<h2 id="discussion-on-extensions">Discussion on Extensions</h2>
+<p><em>Notes</em>: 
+- <strong>Elliptical Orbits</strong>: Kepler’s Third Law generalizes to <span class="arithmatex">\(T^2 = \frac{4\pi^2}{G M} a^3\)</span>, where <span class="arithmatex">\(a\)</span> is the semi-major axis. The derivation uses angular momentum and energy conservation, not circular motion.
+- <strong>Other Bodies</strong>: Applies to binary stars (combined mass <span class="arithmatex">\(M_1 + M_2\)</span>) or exoplanets, adjusting <span class="arithmatex">\(M\)</span>.</p>
+<p><em>Limitations</em>:
+- Assumes <span class="arithmatex">\(M \gg m\)</span> (central mass dominates).
+- Ignores perturbations (e.g., other planets).</p>
+<p><em>Notes</em>: Elliptical extension broadens applicability to most orbits.</p>
+<hr/>
+<h3 id="output-notes">Output Notes</h3>
+<ul>
+<li><strong>Graph</strong>: <span class="arithmatex">\(T^2\)</span> vs. <span class="arithmatex">\(r^3\)</span> is linear on a log-log scale, slope depends on <span class="arithmatex">\(M\)</span>.</li>
+<li><strong>Orbit</strong>: Moon’s path is circular, visually confirming the setup.</li>
+<li><strong>Moon Data</strong>: <span class="arithmatex">\(T \approx 27.32\)</span> days matches reality.</li>
+</ul>
+<p>This solution fully explores Kepler’s Third Law with theory, examples, and simulation. </p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
