deploy: 8ddda72d3ca6b03e7c5b167923a6941cce06a7d1

--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -276,6 +276,9 @@ plt.show()
 
 # Verify with Moon data
 print(f"Moon: T = {T_moon/86400:.2f} days, r = {r_moon/1e6:.1f} Mm")
+
+# Verify with Moon data
+print(f"Moon: T = {T_moon/86400:.2f} days, r = {r_moon/1e6:.1f} Mm")
 </code></pre>
 <p><img alt="alt text" src="image.png"/></p>
 <p><em>Notes on Code</em>:
