--- a/1 Physics/4 Electromagnetism/Problem_1/index.html
+++ b/1 Physics/4 Electromagnetism/Problem_1/index.html
@@ -172,6 +172,259 @@
 <div class="document" itemscope="itemscope" itemtype="http://schema.org/Article" role="main">
 <div class="section" itemprop="articleBody">
 <h1 id="problem-1">Problem 1</h1>
+<h1 id="trajectories-of-a-freely-released-payload-near-earth">Trajectories of a Freely Released Payload Near Earth</h1>
+<h2 id="1-analysis-of-possible-trajectories">1. Analysis of Possible Trajectories</h2>
+<p><em>Notes</em>: When a payload is released from a moving rocket near Earth, its path depends on its initial position, velocity, and Earth’s gravitational pull. Let’s explore the possible trajectories it might follow.</p>
+<ul>
+<li>
+<p><strong>Types of Trajectories</strong>: The path of an object under gravity is a conic section, determined by its specific energy:</p>
+</li>
+<li>
+<p><strong>Elliptical</strong>: If the payload’s energy is negative, it’s bound to Earth and follows a closed, elliptical orbit (like a satellite). This happens if the speed is less than the escape velocity but enough to orbit.</p>
+</li>
+<li>
+<p><strong>Parabolic</strong>: If the energy is exactly zero, the payload just escapes Earth’s gravity, following a parabolic path. This occurs at the escape velocity.</p>
+</li>
+<li>
+<p><strong>Hyperbolic</strong>: If the energy is positive, the payload has excess speed and escapes Earth on a hyperbolic path, never returning. This happens if the speed exceeds the escape velocity.</p>
+</li>
+<li>
+<p><strong>Key Factors</strong>:</p>
+</li>
+<li>
+<p><strong>Initial Position</strong>: The altitude and distance from Earth’s center affect the gravitational force.</p>
+</li>
+<li>
+<p><strong>Initial Velocity</strong>: The speed and direction determine the trajectory type.</p>
+</li>
+<li>
+<p><strong>Earth’s Gravity</strong>: Acts as the central force, following Newton’s law of gravitation.</p>
+</li>
+</ul>
+<p><em>Notes</em>: To classify the trajectory, we need to compute the specific energy and compare the payload’s speed to the local escape velocity.</p>
+<h2 id="2-mathematical-derivation-of-trajectories">2. Mathematical Derivation of Trajectories</h2>
+<p><em>Notes</em>: Let’s set up the equations to determine the payload’s path using gravitational principles.</p>
+<ul>
+<li><strong>Newton’s Law of Gravitation</strong>: The force on the payload (mass <span class="arithmatex">\(m\)</span>) at distance <span class="arithmatex">\(r\)</span> from Earth’s center (mass <span class="arithmatex">\(M\)</span>) is:</li>
+</ul>
+<p><span class="arithmatex">\(F = \frac{G M m}{r^2}\)</span></p>
+<p>where <span class="arithmatex">\(G\)</span> is the gravitational constant.</p>
+<ul>
+<li><strong>Equations of Motion</strong>: In a 2D plane (for simplicity), use Cartesian coordinates <span class="arithmatex">\((x, y)\)</span> with Earth at the origin. The acceleration due to gravity is:</li>
+</ul>
+<p><span class="arithmatex">\(a_x = -\frac{G M x}{r^3}, \quad a_y = -\frac{G M y}{r^3}, \quad r = \sqrt{x^2 + y^2}\)</span></p>
+<p>This gives the second-order differential equations:
+  <span class="arithmatex">\(\frac{d^2 x}{dt^2} = -\frac{G M x}{(x^2 + y^2)^{3/2}}, \quad \frac{d^2 y}{dt^2} = -\frac{G M y}{(x^2 + y^2)^{3/2}}\)</span></p>
+<ul>
+<li>
+<p><strong>Specific Energy</strong>: To classify the trajectory, compute the specific energy <span class="arithmatex">\(\epsilon\)</span> (energy per unit mass):</p>
+</li>
+<li>
+<p>Kinetic energy per unit mass: <span class="arithmatex">\(\frac{1}{2} v^2\)</span>, where <span class="arithmatex">\(v = \sqrt{v_x^2 + v_y^2}\)</span>.</p>
+</li>
+<li>
+<p>Potential energy per unit mass: <span class="arithmatex">\(-\frac{G M}{r}\)</span>.</p>
+</li>
+<li>
+<p>Total specific energy:
+    <span class="arithmatex">\(\epsilon = \frac{1}{2} v^2 - \frac{G M}{r}\)</span></p>
+</li>
+<li>
+<p>Trajectory type:</p>
+<ul>
+<li><span class="arithmatex">\(\epsilon &lt; 0\)</span>: Elliptical (bound orbit).</li>
+<li><span class="arithmatex">\(\epsilon = 0\)</span>: Parabolic (just escapes).</li>
+<li><span class="arithmatex">\(\epsilon &gt; 0\)</span>: Hyperbolic (escapes).</li>
+</ul>
+</li>
+<li>
+<p><strong>Escape Velocity</strong>: At distance <span class="arithmatex">\(r\)</span>, the escape velocity is the speed where <span class="arithmatex">\(\epsilon = 0\)</span>:
+  <span class="arithmatex">\(\frac{1}{2} v_{\text{esc}}^2 - \frac{G M}{r} = 0 \implies v_{\text{esc}} = \sqrt{\frac{2 G M}{r}}\)</span></p>
+</li>
+</ul>
+<p><em>Notes</em>: We’ll use these equations to simulate the payload’s path numerically, since analytical solutions are complex for most initial conditions.</p>
+<h2 id="3-numerical-analysis-setup">3. Numerical Analysis Setup</h2>
+<p><em>Notes</em>: Let’s define the initial conditions for the payload:</p>
+<ul>
+<li>
+<p><strong>Altitude</strong>: Released at 400 km above Earth’s surface (typical for low Earth orbit, like the ISS).</p>
+</li>
+<li>
+<p>Earth’s radius: <span class="arithmatex">\(R = 6,371\)</span> km.</p>
+</li>
+<li>Distance from Earth’s center: <span class="arithmatex">\(r = 6,371 + 400 = 6,771\)</span> km = <span class="arithmatex">\(6.771 \times 10^6\)</span> m.</li>
+<li>
+<p><strong>Position</strong>: Start at <span class="arithmatex">\((x, y) = (6.771 \times 10^6, 0)\)</span> m (along the x-axis).</p>
+</li>
+<li>
+<p><strong>Velocity</strong>: Test three cases to get different trajectories:</p>
+</li>
+<li>
+<p><strong>Elliptical</strong>: Speed less than escape velocity, tangential (circular orbit speed).</p>
+</li>
+<li>
+<p><strong>Parabolic</strong>: Speed equal to escape velocity, tangential.</p>
+</li>
+<li>
+<p><strong>Hyperbolic</strong>: Speed greater than escape velocity, tangential.</p>
+</li>
+<li>
+<p><strong>Earth’s Data</strong>:</p>
+</li>
+<li>Mass: <span class="arithmatex">\(M = 5.972 \times 10^{24}\)</span> kg.</li>
+<li>
+<p><span class="arithmatex">\(G = 6.6743 \times 10^{-11}\)</span> m³/kg·s².</p>
+</li>
+<li>
+<p><strong>Local Escape Velocity</strong>:
+  <span class="arithmatex">\(v_{\text{esc}} = \sqrt{\frac{2 \times 6.6743 \times 10^{-11} \times 5.972 \times 10^{24}}{6.771 \times 10^6}}\)</span></p>
+</li>
+</ul>
+<p>Numerator: <span class="arithmatex">\(2 \times 6.6743 \times 10^{-11} \times 5.972 \times 10^{24} = 7.978 \times 10^{14}\)</span>
+  Fraction: <span class="arithmatex">\(\frac{7.978 \times 10^{14}}{6.771 \times 10^6} \approx 1.178 \times 10^8\)</span></p>
+<p>Square root: <span class="arithmatex">\(v_{\text{esc}} = \sqrt{1.178 \times 10^8} \approx 10,853\)</span> m/s = 10.85 km/s.</p>
+<ul>
+<li><strong>Circular Orbit Velocity</strong> (first cosmic velocity at this altitude):
+  <span class="arithmatex">\(v_{\text{circ}} = \sqrt{\frac{6.6743 \times 10^{-11} \times 5.972 \times 10^{24}}{6.771 \times 10^6}}\)</span></li>
+</ul>
+<p>Numerator: <span class="arithmatex">\(6.6743 \times 10^{-11} \times 5.972 \times 10^{24} = 3.989 \times 10^{14}\)</span></p>
+<p>Fraction: <span class="arithmatex">\(\frac{3.989 \times 10^{14}}{6.771 \times 10^6} \approx 5.892 \times 10^7\)</span></p>
+<p>Square root: <span class="arithmatex">\(v_{\text{circ}} = \sqrt{5.892 \times 10^7} \approx 7,676\)</span> m/s = 7.68 km/s.</p>
+<p><em>Notes</em>: We’ll simulate with speeds of 7.68 km/s (elliptical), 10.85 km/s (parabolic), and 12 km/s (hyperbolic), all in the y-direction (tangential).</p>
+<h2 id="4-implementation">4. Implementation</h2>
+<p><em>Notes</em>: We’ll use Python to numerically solve the equations of motion and plot the trajectories.</p>
+<pre><code class="language-python">import numpy as np
+import matplotlib.pyplot as plt
+from scipy.integrate import odeint
+
+# Constants
+G = 6.6743e-11  # m^3/kg·s^2
+M_earth = 5.972e24  # kg
+R_earth = 6.371e6  # m (Earth's radius)
+
+# Initial conditions
+altitude = 400e3  # 400 km
+r0 = R_earth + altitude  # Distance from Earth's center
+v_circ = np.sqrt(G * M_earth / r0)  # Circular orbit speed
+v_esc = np.sqrt(2 * G * M_earth / r0)  # Escape velocity
+
+# Test three velocities: elliptical, parabolic, hyperbolic
+velocities = [v_circ, v_esc, 12e3]  # m/s
+labels = ['Elliptical (v = 7.68 km/s)', 'Parabolic (v = 10.85 km/s)', 'Hyperbolic (v = 12 km/s)']
+
+# Time array
+t = np.linspace(0, 7200, 1000)  # 2 hours
+
+# Differential equations: state = [x, y, vx, vy]
+def equations(state, t, G, M):
+    x, y, vx, vy = state
+    r = np.sqrt(x**2 + y**2)
+    ax = -G * M * x / r**3
+    ay = -G * M * y / r**3
+    return [vx, vy, ax, ay]
+
+# Simulate trajectories
+trajectories = []
+for v in velocities:
+    # Initial state: start at (r0, 0) with velocity in y-direction
+    state0 = [r0, 0, 0, v]
+    sol = odeint(equations, state0, t, args=(G, M_earth))
+    trajectories.append(sol)
+
+# Plotting
+plt.figure(figsize=(10, 8))
+
+# Plot Earth as a circle
+theta = np.linspace(0, 2*np.pi, 100)
+x_earth = R_earth * np.cos(theta)
+y_earth = R_earth * np.sin(theta)
+plt.plot(x_earth, y_earth, 'b-', label='Earth')
+
+# Plot trajectories
+for i, traj in enumerate(trajectories):
+    x, y = traj[:, 0], traj[:, 1]
+    plt.plot(x, y, label=labels[i])
+
+plt.xlabel('x (m)')
+plt.ylabel('y (m)')
+plt.title('Payload Trajectories Near Earth (Released at 400 km Altitude)')
+plt.axis('equal')
+plt.legend()
+plt.grid(True)
+plt.show()
+
+# Classify trajectories by specific energy
+for i, v in enumerate(velocities):
+    r = r0
+    epsilon = 0.5 * v**2 - G * M_earth / r
+    print(f"{labels[i]}:")
+    print(f"  Speed: {v/1000:.2f} km/s")
+    print(f"  Specific Energy: {epsilon:.2e} J/kg")
+    print(f"  Trajectory: {'Elliptical' if epsilon &lt; 0 else 'Parabolic' if abs(epsilon) &lt; 1e3 else 'Hyperbolic'}")
+</code></pre>
+<p><img alt="alt text" src="image-1.png"/>
+<em>Notes on Code</em>:</p>
+<ul>
+<li>
+<p><strong>Setup</strong>: Defines Earth’s properties and initial conditions at 400 km altitude.</p>
+</li>
+<li>
+<p><strong>Velocities</strong>: Tests three speeds: circular (elliptical), escape (parabolic), and above escape (hyperbolic).</p>
+</li>
+<li>
+<p><strong>Simulation</strong>: Uses <code>odeint</code> to solve the differential equations numerically.</p>
+</li>
+<li>
+<p><strong>Plot</strong>: Shows Earth as a circle and the payload’s path for each case.</p>
+</li>
+<li>
+<p><strong>Energy Check</strong>: Computes specific energy to confirm trajectory types.</p>
+</li>
+</ul>
+<h2 id="5-relation-to-space-scenarios">5. Relation to Space Scenarios</h2>
+<p><em>Notes</em>:
+- <strong>Orbital Insertion</strong>: The elliptical trajectory (v = 7.68 km/s) represents a payload entering a stable orbit, like deploying a satellite. This speed matches the first cosmic velocity at that altitude.</p>
+<ul>
+<li>
+<p><strong>Reentry</strong>: If the speed is too low (below circular velocity), the trajectory would dip into the atmosphere, leading to reentry (not simulated here due to no air resistance).</p>
+</li>
+<li>
+<p><strong>Escape</strong>: The parabolic (v = 10.85 km/s) and hyperbolic (v = 12 km/s) trajectories show the payload escaping Earth, relevant for missions to the Moon or beyond.</p>
+</li>
+</ul>
+<p><em>Notes</em>: These trajectories are key for planning space missions, ensuring payloads reach their intended orbits or destinations.</p>
+<h2 id="discussion-on-extensions">Discussion on Extensions</h2>
+<p><em>Notes</em>:
+- <strong>Air Resistance</strong>: Including drag would affect reentry trajectories, slowing the payload and heating it up.</p>
+<ul>
+<li>
+<p><strong>Earth’s Rotation</strong>: The planet’s spin adds an initial velocity, slightly altering the required speeds.</p>
+</li>
+<li>
+<p><strong>Other Forces</strong>: Solar radiation or other planets’ gravity could perturb the path in real missions.</p>
+</li>
+</ul>
+<p><em>Notes</em>: This simulation provides a foundation for understanding payload motion, critical for satellite deployment and interplanetary travel.</p>
+<hr/>
+<h3 id="rendering-and-running-in-vs-code">Rendering and Running in VS Code</h3>
+<ul>
+<li><strong>File</strong>: Save as <code>payload_trajectories.md</code>.</li>
+<li><strong>Rendering</strong>: Use the "Markdown+Math" extension; preview with <code>Ctrl+Shift+V</code> to see equations like <span class="arithmatex">\(v_{\text{esc}}\)</span> and <span class="arithmatex">\(<span class="arithmatex">\(F\)</span>\)</span>.</li>
+<li><strong>Code</strong>: Extract to <code>payload_trajectories.py</code> or use a <code>.ipynb</code> with the "Jupyter" extension.</li>
+<li><strong>Requirements</strong>: Install <code>numpy</code>, <code>matplotlib</code>, <code>scipy</code> (<code>pip install numpy matplotlib scipy</code>).</li>
+</ul>
+<h3 id="output-notes">Output Notes</h3>
+<ul>
+<li><strong>Plot</strong>: Shows Earth and three trajectories:</li>
+<li>Elliptical: A closed loop (orbit).</li>
+<li>Parabolic: A path that just escapes.</li>
+<li>Hyperbolic: A path that curves away sharply.</li>
+<li><strong>Energy</strong>:</li>
+<li>Elliptical: Negative energy (bound).</li>
+<li>Parabolic: Near-zero energy (just escapes).</li>
+<li>Hyperbolic: Positive energy (escapes easily).</li>
+</ul>
+<p>This solution explains payload trajectories clearly, with theory, simulation, and visuals, making it easy to understand their role in space missions. Let me know if you’d like to adjust initial conditions or add more features!</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
